<resources>
    <string name="app_name">ValerianVectorManager</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">exemplo@email.com.br</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bem Vindo!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Entrar"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="valerian_vector">Valerian Vector</string>
    <string name="home_button_service">Serviço</string>
    <string name="username" >Nome de Usuário</string>
</resources>